--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ mp.messaging.connector.smallrye-kafka.bootstrap.servers = localhost:9092
 quarkus.datasource.db-king = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = 1234
-quarkus.datasource.jdbc.url = jdbc:postgresqp://localhost:5432/proposaldb
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/proposaldb
 quarkus.hibernate-orm.database.generation = update
